sources/frontend/structfe.output
Terminaux inutilisés dans la grammaire

   '.'


Grammaire

    0 $accept: program_start $end

    1 primary_expression: '(' expression ')'
    2                   | CONSTANT
    3                   | IDENTIFIER

    4 postfix_expression: primary_expression
    5                   | postfix_expression '(' ')'
    6                   | postfix_expression '(' argument_expression_list ')'
    7                   | postfix_expression PTR_OP IDENTIFIER

    8 argument_expression_list: expression
    9                         | argument_expression_list ',' expression

   10 unary_expression: postfix_expression
   11                 | unary_operator unary_expression
   12                 | SIZEOF '(' type_specifier ')'
   13                 | SIZEOF unary_expression

   14 unary_operator: '&'
   15               | '*'
   16               | '-'

   17 multiplicative_expression: unary_expression
   18                          | multiplicative_expression '*' unary_expression
   19                          | multiplicative_expression '/' unary_expression

   20 additive_expression: multiplicative_expression
   21                    | additive_expression '+' multiplicative_expression
   22                    | additive_expression '-' multiplicative_expression

   23 relational_expression: additive_expression
   24                      | relational_expression '<' additive_expression
   25                      | relational_expression '>' additive_expression
   26                      | relational_expression LE_OP additive_expression
   27                      | relational_expression GE_OP additive_expression

   28 equality_expression: relational_expression
   29                    | equality_expression EQ_OP relational_expression
   30                    | equality_expression NE_OP relational_expression

   31 logical_and_expression: equality_expression
   32                       | logical_and_expression AND_OP equality_expression

   33 logical_or_expression: logical_and_expression
   34                      | logical_or_expression OR_OP logical_and_expression

   35 expression: logical_or_expression
   36           | unary_expression '=' expression

   37 declaration: declaration_specifiers declarator ';'
   38            | struct_specifier ';'

   39 declaration_specifiers: EXTERN type_specifier
   40                       | type_specifier

   41 type_specifier: VOID
   42               | INT
   43               | struct_specifier

   44 struct_specifier: STRUCT IDENTIFIER '{' struct_declaration_list '}'
   45                 | STRUCT '{' struct_declaration_list '}'
   46                 | STRUCT IDENTIFIER

   47 struct_declaration_list: struct_declaration
   48                        | struct_declaration_list struct_declaration

   49 struct_declaration: type_specifier declarator ';'

   50 @1: %empty

   51 declarator: '*' @1 direct_declarator

   52 @2: %empty

   53 declarator: @2 direct_declarator

   54 @3: %empty

   55 direct_declarator: '(' @3 declarator ')'
   56                  | IDENTIFIER
   57                  | direct_declarator '(' parameter_list ')'
   58                  | direct_declarator '(' ')'

   59 parameter_list: parameter_declaration
   60               | parameter_list ',' parameter_declaration

   61 parameter_declaration: declaration_specifiers declarator

   62 statement: compound_statement
   63          | expression_statement
   64          | selection_statement
   65          | iteration_statement
   66          | jump_statement

   67 entree: '{'

   68 sortie: '}'

   69 compound_statement: '{' '}'
   70                   | entree statement_list sortie
   71                   | entree declaration_list sortie
   72                   | entree declaration_list statement_list sortie

   73 declaration_list: declaration
   74                 | declaration_list declaration

   75 statement_list: statement
   76               | statement_list statement

   77 expression_statement: ';'
   78                     | expression ';'

   79 selection_statement: IF '(' expression ')' statement
   80                    | IF '(' expression ')' statement ELSE statement

   81 iteration_statement: WHILE '(' expression ')' statement
   82                    | FOR '(' expression_statement expression_statement expression ')' statement

   83 jump_statement: RETURN ';'
   84               | RETURN expression ';'

   85 program_start: program

   86 program: external_declaration
   87        | program external_declaration

   88 external_declaration: function_definition
   89                     | declaration

   90 function_definition: declaration_specifiers declarator compound_statement


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'&' (38) 14
'(' (40) 1 5 6 12 55 57 58 79 80 81 82
')' (41) 1 5 6 12 55 57 58 79 80 81 82
'*' (42) 15 18 51
'+' (43) 21
',' (44) 9 60
'-' (45) 16 22
'.' (46)
'/' (47) 19
';' (59) 37 38 49 77 78 83 84
'<' (60) 24
'=' (61) 36
'>' (62) 25
'{' (123) 44 45 67 69
'}' (125) 44 45 68 69
error (256)
SIZEOF (258) 12 13
PTR_OP (259) 7
LE_OP (260) 26
GE_OP (261) 27
EQ_OP (262) 29
NE_OP (263) 30
AND_OP (264) 32
OR_OP (265) 34
EXTERN (266) 39
INT (267) 42
VOID (268) 41
STRUCT (269) 44 45 46
IF (270) 79 80
ELSE (271) 80
WHILE (272) 81
FOR (273) 82
RETURN (274) 83 84
IDENTIFIER (275) 3 7 44 46 56
CONSTANT (276) 2
"then" (277)


Non-terminaux, suivis des règles où ils apparaissent

$accept (38)
    à gauche: 0
primary_expression (39)
    à gauche: 1 2 3, à droite: 4
postfix_expression (40)
    à gauche: 4 5 6 7, à droite: 5 6 7 10
argument_expression_list (41)
    à gauche: 8 9, à droite: 6 9
unary_expression (42)
    à gauche: 10 11 12 13, à droite: 11 13 17 18 19 36
unary_operator (43)
    à gauche: 14 15 16, à droite: 11
multiplicative_expression (44)
    à gauche: 17 18 19, à droite: 18 19 20 21 22
additive_expression (45)
    à gauche: 20 21 22, à droite: 21 22 23 24 25 26 27
relational_expression (46)
    à gauche: 23 24 25 26 27, à droite: 24 25 26 27 28 29 30
equality_expression (47)
    à gauche: 28 29 30, à droite: 29 30 31 32
logical_and_expression (48)
    à gauche: 31 32, à droite: 32 33 34
logical_or_expression (49)
    à gauche: 33 34, à droite: 34 35
expression (50)
    à gauche: 35 36, à droite: 1 8 9 36 78 79 80 81 82 84
declaration (51)
    à gauche: 37 38, à droite: 73 74 89
declaration_specifiers (52)
    à gauche: 39 40, à droite: 37 61 90
type_specifier (53)
    à gauche: 41 42 43, à droite: 12 39 40 49
struct_specifier (54)
    à gauche: 44 45 46, à droite: 38 43
struct_declaration_list (55)
    à gauche: 47 48, à droite: 44 45 48
struct_declaration (56)
    à gauche: 49, à droite: 47 48
declarator (57)
    à gauche: 51 53, à droite: 37 49 55 61 90
@1 (58)
    à gauche: 50, à droite: 51
@2 (59)
    à gauche: 52, à droite: 53
direct_declarator (60)
    à gauche: 55 56 57 58, à droite: 51 53 57 58
@3 (61)
    à gauche: 54, à droite: 55
parameter_list (62)
    à gauche: 59 60, à droite: 57 60
parameter_declaration (63)
    à gauche: 61, à droite: 59 60
statement (64)
    à gauche: 62 63 64 65 66, à droite: 75 76 79 80 81 82
entree (65)
    à gauche: 67, à droite: 70 71 72
sortie (66)
    à gauche: 68, à droite: 70 71 72
compound_statement (67)
    à gauche: 69 70 71 72, à droite: 62 90
declaration_list (68)
    à gauche: 73 74, à droite: 71 72 74
statement_list (69)
    à gauche: 75 76, à droite: 70 72 76
expression_statement (70)
    à gauche: 77 78, à droite: 63 82
selection_statement (71)
    à gauche: 79 80, à droite: 64
iteration_statement (72)
    à gauche: 81 82, à droite: 65
jump_statement (73)
    à gauche: 83 84, à droite: 66
program_start (74)
    à gauche: 85, à droite: 0
program (75)
    à gauche: 86 87, à droite: 85 87
external_declaration (76)
    à gauche: 88 89, à droite: 86 87
function_definition (77)
    à gauche: 90, à droite: 88


État 0

    0 $accept: . program_start $end

    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    declaration             aller à l'état 5
    declaration_specifiers  aller à l'état 6
    type_specifier          aller à l'état 7
    struct_specifier        aller à l'état 8
    program_start           aller à l'état 9
    program                 aller à l'état 10
    external_declaration    aller à l'état 11
    function_definition     aller à l'état 12


État 1

   39 declaration_specifiers: EXTERN . type_specifier

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    type_specifier    aller à l'état 13
    struct_specifier  aller à l'état 14


État 2

   42 type_specifier: INT .

    $défaut  réduction par utilisation de la règle 42 (type_specifier)


État 3

   41 type_specifier: VOID .

    $défaut  réduction par utilisation de la règle 41 (type_specifier)


État 4

   44 struct_specifier: STRUCT . IDENTIFIER '{' struct_declaration_list '}'
   45                 | STRUCT . '{' struct_declaration_list '}'
   46                 | STRUCT . IDENTIFIER

    '{'         décalage et aller à l'état 15
    IDENTIFIER  décalage et aller à l'état 16


État 5

   89 external_declaration: declaration .

    $défaut  réduction par utilisation de la règle 89 (external_declaration)


État 6

   37 declaration: declaration_specifiers . declarator ';'
   90 function_definition: declaration_specifiers . declarator compound_statement

    '*'  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 52 (@2)

    declarator  aller à l'état 18
    @2          aller à l'état 19


État 7

   40 declaration_specifiers: type_specifier .

    $défaut  réduction par utilisation de la règle 40 (declaration_specifiers)


État 8

   38 declaration: struct_specifier . ';'
   43 type_specifier: struct_specifier .

    ';'  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 43 (type_specifier)


État 9

    0 $accept: program_start . $end

    $end  décalage et aller à l'état 21


État 10

   85 program_start: program .
   87 program: program . external_declaration

    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 85 (program_start)

    declaration             aller à l'état 5
    declaration_specifiers  aller à l'état 6
    type_specifier          aller à l'état 7
    struct_specifier        aller à l'état 8
    external_declaration    aller à l'état 22
    function_definition     aller à l'état 12


État 11

   86 program: external_declaration .

    $défaut  réduction par utilisation de la règle 86 (program)


État 12

   88 external_declaration: function_definition .

    $défaut  réduction par utilisation de la règle 88 (external_declaration)


État 13

   39 declaration_specifiers: EXTERN type_specifier .

    $défaut  réduction par utilisation de la règle 39 (declaration_specifiers)


État 14

   43 type_specifier: struct_specifier .

    $défaut  réduction par utilisation de la règle 43 (type_specifier)


État 15

   45 struct_specifier: STRUCT '{' . struct_declaration_list '}'

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    type_specifier           aller à l'état 23
    struct_specifier         aller à l'état 14
    struct_declaration_list  aller à l'état 24
    struct_declaration       aller à l'état 25


État 16

   44 struct_specifier: STRUCT IDENTIFIER . '{' struct_declaration_list '}'
   46                 | STRUCT IDENTIFIER .

    '{'  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 46 (struct_specifier)


État 17

   51 declarator: '*' . @1 direct_declarator

    $défaut  réduction par utilisation de la règle 50 (@1)

    @1  aller à l'état 27


État 18

   37 declaration: declaration_specifiers declarator . ';'
   90 function_definition: declaration_specifiers declarator . compound_statement

    '{'  décalage et aller à l'état 28
    ';'  décalage et aller à l'état 29

    entree              aller à l'état 30
    compound_statement  aller à l'état 31


État 19

   53 declarator: @2 . direct_declarator

    '('         décalage et aller à l'état 32
    IDENTIFIER  décalage et aller à l'état 33

    direct_declarator  aller à l'état 34


État 20

   38 declaration: struct_specifier ';' .

    $défaut  réduction par utilisation de la règle 38 (declaration)


État 21

    0 $accept: program_start $end .

    $défaut  accepter


État 22

   87 program: program external_declaration .

    $défaut  réduction par utilisation de la règle 87 (program)


État 23

   49 struct_declaration: type_specifier . declarator ';'

    '*'  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 52 (@2)

    declarator  aller à l'état 35
    @2          aller à l'état 19


État 24

   45 struct_specifier: STRUCT '{' struct_declaration_list . '}'
   48 struct_declaration_list: struct_declaration_list . struct_declaration

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4
    '}'     décalage et aller à l'état 36

    type_specifier      aller à l'état 23
    struct_specifier    aller à l'état 14
    struct_declaration  aller à l'état 37


État 25

   47 struct_declaration_list: struct_declaration .

    $défaut  réduction par utilisation de la règle 47 (struct_declaration_list)


État 26

   44 struct_specifier: STRUCT IDENTIFIER '{' . struct_declaration_list '}'

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    type_specifier           aller à l'état 23
    struct_specifier         aller à l'état 14
    struct_declaration_list  aller à l'état 38
    struct_declaration       aller à l'état 25


État 27

   51 declarator: '*' @1 . direct_declarator

    '('         décalage et aller à l'état 32
    IDENTIFIER  décalage et aller à l'état 33

    direct_declarator  aller à l'état 39


État 28

   67 entree: '{' .
   69 compound_statement: '{' . '}'

    '}'  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 67 (entree)


État 29

   37 declaration: declaration_specifiers declarator ';' .

    $défaut  réduction par utilisation de la règle 37 (declaration)


État 30

   70 compound_statement: entree . statement_list sortie
   71                   | entree . declaration_list sortie
   72                   | entree . declaration_list statement_list sortie

    SIZEOF      décalage et aller à l'état 41
    EXTERN      décalage et aller à l'état 1
    INT         décalage et aller à l'état 2
    VOID        décalage et aller à l'état 3
    STRUCT      décalage et aller à l'état 4
    IF          décalage et aller à l'état 42
    WHILE       décalage et aller à l'état 43
    FOR         décalage et aller à l'état 44
    RETURN      décalage et aller à l'état 45
    '('         décalage et aller à l'état 46
    '{'         décalage et aller à l'état 28
    ';'         décalage et aller à l'état 47
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 63
    declaration                aller à l'état 64
    declaration_specifiers     aller à l'état 65
    type_specifier             aller à l'état 7
    struct_specifier           aller à l'état 8
    statement                  aller à l'état 66
    entree                     aller à l'état 30
    compound_statement         aller à l'état 67
    declaration_list           aller à l'état 68
    statement_list             aller à l'état 69
    expression_statement       aller à l'état 70
    selection_statement        aller à l'état 71
    iteration_statement        aller à l'état 72
    jump_statement             aller à l'état 73


État 31

   90 function_definition: declaration_specifiers declarator compound_statement .

    $défaut  réduction par utilisation de la règle 90 (function_definition)


État 32

   55 direct_declarator: '(' . @3 declarator ')'

    $défaut  réduction par utilisation de la règle 54 (@3)

    @3  aller à l'état 74


État 33

   56 direct_declarator: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 56 (direct_declarator)


État 34

   53 declarator: @2 direct_declarator .
   57 direct_declarator: direct_declarator . '(' parameter_list ')'
   58                  | direct_declarator . '(' ')'

    '('  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 53 (declarator)


État 35

   49 struct_declaration: type_specifier declarator . ';'

    ';'  décalage et aller à l'état 76


État 36

   45 struct_specifier: STRUCT '{' struct_declaration_list '}' .

    $défaut  réduction par utilisation de la règle 45 (struct_specifier)


État 37

   48 struct_declaration_list: struct_declaration_list struct_declaration .

    $défaut  réduction par utilisation de la règle 48 (struct_declaration_list)


État 38

   44 struct_specifier: STRUCT IDENTIFIER '{' struct_declaration_list . '}'
   48 struct_declaration_list: struct_declaration_list . struct_declaration

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4
    '}'     décalage et aller à l'état 77

    type_specifier      aller à l'état 23
    struct_specifier    aller à l'état 14
    struct_declaration  aller à l'état 37


État 39

   51 declarator: '*' @1 direct_declarator .
   57 direct_declarator: direct_declarator . '(' parameter_list ')'
   58                  | direct_declarator . '(' ')'

    '('  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 51 (declarator)


État 40

   69 compound_statement: '{' '}' .

    $défaut  réduction par utilisation de la règle 69 (compound_statement)


État 41

   12 unary_expression: SIZEOF . '(' type_specifier ')'
   13                 | SIZEOF . unary_expression

    SIZEOF      décalage et aller à l'état 41
    '('         décalage et aller à l'état 78
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression  aller à l'état 53
    postfix_expression  aller à l'état 54
    unary_expression    aller à l'état 79
    unary_operator      aller à l'état 56


État 42

   79 selection_statement: IF . '(' expression ')' statement
   80                    | IF . '(' expression ')' statement ELSE statement

    '('  décalage et aller à l'état 80


État 43

   81 iteration_statement: WHILE . '(' expression ')' statement

    '('  décalage et aller à l'état 81


État 44

   82 iteration_statement: FOR . '(' expression_statement expression_statement expression ')' statement

    '('  décalage et aller à l'état 82


État 45

   83 jump_statement: RETURN . ';'
   84               | RETURN . expression ';'

    SIZEOF      décalage et aller à l'état 41
    '('         décalage et aller à l'état 46
    ';'         décalage et aller à l'état 83
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 84


État 46

    1 primary_expression: '(' . expression ')'

    SIZEOF      décalage et aller à l'état 41
    '('         décalage et aller à l'état 46
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 85


État 47

   77 expression_statement: ';' .

    $défaut  réduction par utilisation de la règle 77 (expression_statement)


État 48

   14 unary_operator: '&' .

    $défaut  réduction par utilisation de la règle 14 (unary_operator)


État 49

   15 unary_operator: '*' .

    $défaut  réduction par utilisation de la règle 15 (unary_operator)


État 50

   16 unary_operator: '-' .

    $défaut  réduction par utilisation de la règle 16 (unary_operator)


État 51

    3 primary_expression: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 3 (primary_expression)


État 52

    2 primary_expression: CONSTANT .

    $défaut  réduction par utilisation de la règle 2 (primary_expression)


État 53

    4 postfix_expression: primary_expression .

    $défaut  réduction par utilisation de la règle 4 (postfix_expression)


État 54

    5 postfix_expression: postfix_expression . '(' ')'
    6                   | postfix_expression . '(' argument_expression_list ')'
    7                   | postfix_expression . PTR_OP IDENTIFIER
   10 unary_expression: postfix_expression .

    PTR_OP  décalage et aller à l'état 86
    '('     décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 10 (unary_expression)


État 55

   17 multiplicative_expression: unary_expression .
   36 expression: unary_expression . '=' expression

    '='  décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 17 (multiplicative_expression)


État 56

   11 unary_expression: unary_operator . unary_expression

    SIZEOF      décalage et aller à l'état 41
    '('         décalage et aller à l'état 46
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression  aller à l'état 53
    postfix_expression  aller à l'état 54
    unary_expression    aller à l'état 89
    unary_operator      aller à l'état 56


État 57

   18 multiplicative_expression: multiplicative_expression . '*' unary_expression
   19                          | multiplicative_expression . '/' unary_expression
   20 additive_expression: multiplicative_expression .

    '*'  décalage et aller à l'état 90
    '/'  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 20 (additive_expression)


État 58

   21 additive_expression: additive_expression . '+' multiplicative_expression
   22                    | additive_expression . '-' multiplicative_expression
   23 relational_expression: additive_expression .

    '-'  décalage et aller à l'état 92
    '+'  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 23 (relational_expression)


État 59

   24 relational_expression: relational_expression . '<' additive_expression
   25                      | relational_expression . '>' additive_expression
   26                      | relational_expression . LE_OP additive_expression
   27                      | relational_expression . GE_OP additive_expression
   28 equality_expression: relational_expression .

    LE_OP  décalage et aller à l'état 94
    GE_OP  décalage et aller à l'état 95
    '>'    décalage et aller à l'état 96
    '<'    décalage et aller à l'état 97

    $défaut  réduction par utilisation de la règle 28 (equality_expression)


État 60

   29 equality_expression: equality_expression . EQ_OP relational_expression
   30                    | equality_expression . NE_OP relational_expression
   31 logical_and_expression: equality_expression .

    EQ_OP  décalage et aller à l'état 98
    NE_OP  décalage et aller à l'état 99

    $défaut  réduction par utilisation de la règle 31 (logical_and_expression)


État 61

   32 logical_and_expression: logical_and_expression . AND_OP equality_expression
   33 logical_or_expression: logical_and_expression .

    AND_OP  décalage et aller à l'état 100

    $défaut  réduction par utilisation de la règle 33 (logical_or_expression)


État 62

   34 logical_or_expression: logical_or_expression . OR_OP logical_and_expression
   35 expression: logical_or_expression .

    OR_OP  décalage et aller à l'état 101

    $défaut  réduction par utilisation de la règle 35 (expression)


État 63

   78 expression_statement: expression . ';'

    ';'  décalage et aller à l'état 102


État 64

   73 declaration_list: declaration .

    $défaut  réduction par utilisation de la règle 73 (declaration_list)


État 65

   37 declaration: declaration_specifiers . declarator ';'

    '*'  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 52 (@2)

    declarator  aller à l'état 103
    @2          aller à l'état 19


État 66

   75 statement_list: statement .

    $défaut  réduction par utilisation de la règle 75 (statement_list)


État 67

   62 statement: compound_statement .

    $défaut  réduction par utilisation de la règle 62 (statement)


État 68

   71 compound_statement: entree declaration_list . sortie
   72                   | entree declaration_list . statement_list sortie
   74 declaration_list: declaration_list . declaration

    SIZEOF      décalage et aller à l'état 41
    EXTERN      décalage et aller à l'état 1
    INT         décalage et aller à l'état 2
    VOID        décalage et aller à l'état 3
    STRUCT      décalage et aller à l'état 4
    IF          décalage et aller à l'état 42
    WHILE       décalage et aller à l'état 43
    FOR         décalage et aller à l'état 44
    RETURN      décalage et aller à l'état 45
    '('         décalage et aller à l'état 46
    '{'         décalage et aller à l'état 28
    '}'         décalage et aller à l'état 104
    ';'         décalage et aller à l'état 47
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 63
    declaration                aller à l'état 105
    declaration_specifiers     aller à l'état 65
    type_specifier             aller à l'état 7
    struct_specifier           aller à l'état 8
    statement                  aller à l'état 66
    entree                     aller à l'état 30
    sortie                     aller à l'état 106
    compound_statement         aller à l'état 67
    statement_list             aller à l'état 107
    expression_statement       aller à l'état 70
    selection_statement        aller à l'état 71
    iteration_statement        aller à l'état 72
    jump_statement             aller à l'état 73


État 69

   70 compound_statement: entree statement_list . sortie
   76 statement_list: statement_list . statement

    SIZEOF      décalage et aller à l'état 41
    IF          décalage et aller à l'état 42
    WHILE       décalage et aller à l'état 43
    FOR         décalage et aller à l'état 44
    RETURN      décalage et aller à l'état 45
    '('         décalage et aller à l'état 46
    '{'         décalage et aller à l'état 28
    '}'         décalage et aller à l'état 104
    ';'         décalage et aller à l'état 47
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 63
    statement                  aller à l'état 108
    entree                     aller à l'état 30
    sortie                     aller à l'état 109
    compound_statement         aller à l'état 67
    expression_statement       aller à l'état 70
    selection_statement        aller à l'état 71
    iteration_statement        aller à l'état 72
    jump_statement             aller à l'état 73


État 70

   63 statement: expression_statement .

    $défaut  réduction par utilisation de la règle 63 (statement)


État 71

   64 statement: selection_statement .

    $défaut  réduction par utilisation de la règle 64 (statement)


État 72

   65 statement: iteration_statement .

    $défaut  réduction par utilisation de la règle 65 (statement)


État 73

   66 statement: jump_statement .

    $défaut  réduction par utilisation de la règle 66 (statement)


État 74

   55 direct_declarator: '(' @3 . declarator ')'

    '*'  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 52 (@2)

    declarator  aller à l'état 110
    @2          aller à l'état 19


État 75

   57 direct_declarator: direct_declarator '(' . parameter_list ')'
   58                  | direct_declarator '(' . ')'

    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4
    ')'     décalage et aller à l'état 111

    declaration_specifiers  aller à l'état 112
    type_specifier          aller à l'état 7
    struct_specifier        aller à l'état 14
    parameter_list          aller à l'état 113
    parameter_declaration   aller à l'état 114


État 76

   49 struct_declaration: type_specifier declarator ';' .

    $défaut  réduction par utilisation de la règle 49 (struct_declaration)


État 77

   44 struct_specifier: STRUCT IDENTIFIER '{' struct_declaration_list '}' .

    $défaut  réduction par utilisation de la règle 44 (struct_specifier)


État 78

    1 primary_expression: '(' . expression ')'
   12 unary_expression: SIZEOF '(' . type_specifier ')'

    SIZEOF      décalage et aller à l'état 41
    INT         décalage et aller à l'état 2
    VOID        décalage et aller à l'état 3
    STRUCT      décalage et aller à l'état 4
    '('         décalage et aller à l'état 46
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 85
    type_specifier             aller à l'état 115
    struct_specifier           aller à l'état 14


État 79

   13 unary_expression: SIZEOF unary_expression .

    $défaut  réduction par utilisation de la règle 13 (unary_expression)


État 80

   79 selection_statement: IF '(' . expression ')' statement
   80                    | IF '(' . expression ')' statement ELSE statement

    SIZEOF      décalage et aller à l'état 41
    '('         décalage et aller à l'état 46
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 116


État 81

   81 iteration_statement: WHILE '(' . expression ')' statement

    SIZEOF      décalage et aller à l'état 41
    '('         décalage et aller à l'état 46
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 117


État 82

   82 iteration_statement: FOR '(' . expression_statement expression_statement expression ')' statement

    SIZEOF      décalage et aller à l'état 41
    '('         décalage et aller à l'état 46
    ';'         décalage et aller à l'état 47
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52

    primary_expression         aller à l'état 53
    postfix_expression         aller à l'état 54
    unary_expression           aller à l'état 55
    unary_operator             aller à l'état 56
    multiplicative_expression  aller à l'état 57
    additive_expression        aller à l'état 58
    relational_expression      aller à l'état 59
    equality_expression        aller à l'état 60
    logical_and_expression     aller à l'état 61
    logical_or_expression      aller à l'état 62
    expression                 aller à l'état 63
    expression_statement       aller à l'état 118


État 83

   83 jump_statement: RETURN ';' .

    $défaut  réduction par utilisation de la règle 83 (jump_statement)


État 84

   84 jump_statement: RETURN expression . ';'

    ';'  décalage et aller à l'état 119


État 85

    1 primary_expression: '(' expression . ')'

    ')'  décalage et aller à l'état 120


État 86

    7 postfix_expression: postfix_expression PTR_OP . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 121


État 87

    5 postfix_expression: postfix_expression '(' . ')'
    6                   | postfix_expression '(' . argument_expression_list ')'

    SIZEOF      décalage et aller à l'état 41
    '('         décalage et aller à l'état 46
    ')'         décalage et aller à l'état 122
    '&'         décalage et aller à l'état 48
    '*'         décalage et aller à l'état 49
    '-'         décalage et aller à l'état 50
    IDENTIFIER  décalage et aller à l'état 51
    CONSTANT    décalage et aller à l'état 52
